# misc

./: README.md  config.sh  install.sh  misc.sh
Generate POJOs/: Generate POJOs.groovy
StartUp/: init.vbs.lnk
SumatraPDF/: README.md  SumatraPDF-settings.txt
ahk/: .gitignore  ahk.ahk  global.ahk  obsidian.ahk
apt/: README.md  install.sh  proxy.conf
bash/: .shuidun-bash-config.sh  install.sh
clash/: mixin.yaml  parser.yaml
cmake/: REAME.md
cmake/c/: CMakeLists.txt
cmake/cpp/: CMakeLists.txt
environment/: install.sh
fzf/: install.sh
gen-pojo/: Generate POJOs.groovy  README.md
git/: .gitconfig  README.md  gitconfig  install.sh
hexer/: .hexerrc  install.sh
htop/: htoprc  install.sh
marp/: README.md  beamer.css
maven/: dependency-and-main-class.xml  dependency.xml  jdk-version.xml  main-class.xml  profile.xml
misc/: install.sh
network_info/: install.sh  network_info
node/: install.sh
npp/: shortcuts.xml
python/: install.sh
softwares/: install.sh  lists.txt
ssh/: install.sh  my_sshd_config
startup/: init.vbs
vim/: .vimrc  README.md  install.sh  vimrc
vscode/: README.md
vscode/vscode_c/: c_cpp_properties.json  launch.json  tasks.json
vscode/vscode_cpp/: c_cpp_properties.json  launch.json  settings.json  tasks.json
windows-terminal/: README.md  settings.json
word/: Normal.dotm
wt/: settings.json
zotero/: BibTeX.txt  README.md  simple.csl
zoxide/: install.sh
zsh/: README.md  install.sh  welcome  zshrc
